--- a/sign-up.html
+++ b/sign-up.html
@@ -54,8 +54,8 @@
     <div class = "row-fluid"> <!-- Tabs -->
       <div class = "col-md-12">
         <ul class="nav nav-tabs">
-          <li role="presentation"><a href="#">Log in</a></li>
-          <li role="presentation" class="active"><a href="#">Sign up</a></li>
+          <li role="presentation"><a href="sign-in.html">Log in</a></li>
+          <li role="presentation" class="active"><a href="sign-up.html">Sign up</a></li>
         </ul>
         <h4 id = "form-title">Stack Overflow is part of the <img src="https://cdn.sstatic.net/img/se-logo.png" width = "200px"/> network of 149  Q&A <a href = "https://stackexchange.com/sites" target = "blank">communities</a>.</h4>
       </div> <!-- end col-md-12 -->
