added sign up and log in links to nav bar

--- a/sign-in.html
+++ b/sign-in.html
@@ -24,9 +24,11 @@
         <li><a href="messages.html"><img src="images/achievements.png" width="16"></a></li>
        </ul>
        <ul class="navbar-form navbar-right" role="search">
-         <div class="form-group">
-           <input type="text" class="form-control" placeholder="Search">
-         </div>
+         <p>
+            <a href="sign-up.html" class = "nav-text">sign up</a>
+            <a href="sign-in.html" class = "nav-text">log in</a>
+            <input type="text" class="form-control" placeholder="Search">
+          </p>
        </ul>
     </section>
   </nav>
