--- a/home.html
+++ b/home.html
@@ -21,11 +21,15 @@
       <ul class="nav navbar-nav">
         <li><a href="inbox.html"><img src="images/inbox.png" width="20"></a></li>
         <li><a href="messages.html"><img src="images/achievements.png" width="16"></a></li>
-       </ul>
-       <ul class="navbar-form navbar-right" role="search">
-         <div class="form-group">
-           <input type="text" class="form-control" placeholder="Search">
-         </div>
+      </ul>
+      <ul class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <p>
+            <a href="sign-up.html" class = "nav-text">sign up</a>
+            <a href="sign-in.html" class = "nav-text">log in</a>
+            <input type="text" class="form-control" placeholder="Search">
+          </p>
+        </div>
        </ul>
     </section>
   </nav>
