added nav menu options and linked home.html to rutgers logo

--- a/sign-in.html
+++ b/sign-in.html
@@ -15,20 +15,21 @@
   <nav class="navbar navbar-inverse"> <!-- Navbar by Shreyans Patel -->
     <section class="container">
       <header class="navbar-header">
-        <a href="/" class="navbar-brand">
+        <a href="home.html" class="navbar-brand">
           <img src="images/rutgers.png" width="25" />
         </a>
       </header>
-      <ul class="nav navbar-nav">
-        <li><a href="inbox.html"><img src="images/inbox.png" width="20"></a></li>
-        <li><a href="messages.html"><img src="images/achievements.png" width="16"></a></li>
-       </ul>
-       <ul class="navbar-form navbar-right" role="search">
-         <p>
+      <ul class="navbar-form navbar-right" role="search">
+        <div class="form-group">
+          <p>
             <a href="sign-up.html" class = "nav-text">sign up</a>
             <a href="sign-in.html" class = "nav-text">log in</a>
+            <a href="#" class = "nav-text">tour</a>
+            <a href="#" class = "nav-text">help <span class = "glyphicon glyphicon-menu-down"></span></a>
+            <a href="#" class = "nav-text">stack overflow careers</a>
             <input type="text" class="form-control" placeholder="Search">
           </p>
+        </div>
        </ul>
     </section>
   </nav>
