--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-inverse"> <!-- Navbar by Shreyans Patel -->
     <section class="container">
       <header class="navbar-header">
-        <a href="/" class="navbar-brand">
+        <a href="home.html" class="navbar-brand">
           <img src="images/rutgers.png" width="25" />
         </a>
       </header>
@@ -27,6 +27,9 @@
           <p>
             <a href="sign-up.html" class = "nav-text">sign up</a>
             <a href="sign-in.html" class = "nav-text">log in</a>
+            <a href="#" class = "nav-text">tour</a>
+            <a href="#" class = "nav-text">help <span class = "glyphicon glyphicon-menu-down"></span></a>
+            <a href="#" class = "nav-text">stack overflow careers</a>
             <input type="text" class="form-control" placeholder="Search">
           </p>
         </div>
