added stack exchange logo. removed rutgers logo

--- a/sign-in.html
+++ b/sign-in.html
@@ -16,7 +16,7 @@
     <section class="container">
       <header class="navbar-header">
         <a href="home.html" class="navbar-brand">
-          <img src="images/rutgers.png" width="25" />
+          <img src="images/stack-exchange.png" width="150px" />
         </a>
       </header>
       <ul class="navbar-form navbar-right" role="search">
