--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
     <section class="container">
       <header class="navbar-header">
         <a href="home.html" class="navbar-brand">
-          <img src="images/rutgers.png" width="25" />
+          <img src="images/stack-exchange.png" width="150px" />
         </a>
       </header>
       <ul class="nav navbar-nav">
