--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
         </a>
       </header>
       <ul class="nav navbar-nav">
-        <li><a href="inbox.html"><img src="images/inbox.png" width="20"></a></li>
-        <li><a href="messages.html"><img src="images/achievements.png" width="16"></a></li>
+        <li><span class = "glyphicon glyphicon-envelope nav-icons"></span></li>
+        <li><span class = "glyphicon glyphicon-stats nav-icons"></span></li>
       </ul>
       <ul class="navbar-form navbar-right" role="search">
         <div class="form-group">
