--- a/sign-up.html
+++ b/sign-up.html
@@ -19,6 +19,10 @@
           <img src="images/stack-exchange.png" width="150px" />
         </a>
       </header>
+      <ul class="nav navbar-nav">
+        <li><span class = "glyphicon glyphicon-envelope nav-icons"></span></li>
+        <li><span class = "glyphicon glyphicon-stats nav-icons"></span></li>
+      </ul>
       <ul class="navbar-form navbar-right" role="search">
         <div class="form-group">
           <p>
